default/objects/Activity/fields/LookupTask__c.field-meta.xml
<CustomField>
    <fullName>LookupTask__c</fullName>
    <label>Lookup Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>