default/objects/Activity/fields/ParentSubject__c.field-meta.xml
<CustomField>
    <fullName>ParentSubject__c</fullName>
    <label>Parent Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>