default/objects/Activity/fields/RelacionadorDeTask__c.field-meta.xml
<CustomField>
    <fullName>RelacionadorDeTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relacionador de Task</label>
    <referenceTo>RelacionadorDeTasks__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>