default/objects/Activity/fields/Revision_date__c.field-meta.xml
<CustomField>
    <fullName>Revision_date__c</fullName>
    <label>Revision date</label>
    <type>Date</type>
</CustomField>