default/objects/Activity/fields/Status_Information__c.field-meta.xml
<CustomField>
    <fullName>Status_Information__c</fullName>
    <label>Status Information</label>
    <length>20</length>
    <type>Text</type>
</CustomField>