default/objects/Activity/fields/SubTheme__c.field-meta.xml
<CustomField>
    <fullName>SubTheme__c</fullName>
    <label>SubTheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>