default/objects/Activity/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>